--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.0",
-    "@chakra-ui/react": "^1.6.5",
+    "@chakra-ui/react": "^1.8.9",
     "@emoji-mart/data": "^1.0.6",
     "@emoji-mart/react": "^1.0.1",
-    "@emotion/react": "11",
-    "@emotion/styled": "11",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@prisma/client": "^4.15.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -23,7 +23,7 @@
     "chart.js": "^4.3.0",
     "date-fns": "^2.30.0",
     "emoji-mart": "^5.2.2",
-    "framer-motion": "4",
+    "framer-motion": "^4.1.17",
     "lodash": "^4.17.21",
     "next": "12.3.1",
     "next-auth": "^4.22.1",
