add blurred pfps while loading

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "date-fns": "^2.30.0",
     "emoji-mart": "^5.2.2",
     "framer-motion": "^4.1.17",
+    "jimp": "^0.22.8",
     "lodash": "^4.17.21",
     "next": "12.3.1",
     "next-auth": "^4.22.1",
@@ -65,7 +66,7 @@
     "i": "^0.3.7",
     "npm": "^8.6.0",
     "prettier": "^2.6.1",
-    "prisma": "^4.15.0",
+    "prisma": "^4.16.2",
     "rehype-highlight": "^5.0.2",
     "remark-gfm": "^3.0.1",
     "remark-rehype": "^10.1.0",
