temporary fix fetchdomain (sql on edge)

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emoji-mart/react": "^1.0.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@neondatabase/serverless": "^0.5.2",
     "@prisma/client": "^4.15.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -26,13 +27,13 @@
     "framer-motion": "^4.1.17",
     "jimp": "^0.22.8",
     "lodash": "^4.17.21",
-    "next": "12.3.1",
+    "next": "^13.4.4",
     "next-auth": "^4.22.1",
     "next-seo": "^5.5.0",
     "nodemailer": "^6.9.3",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1",
@@ -55,7 +56,7 @@
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "eslint": "8.12.0",
-    "eslint-config-next": "12.1.2",
+    "eslint-config-next": "^13.4.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
