--- a/package.json
+++ b/package.json
@@ -72,6 +72,6 @@
     "remark-gfm": "^3.0.1",
     "remark-rehype": "^10.1.0",
     "sort-package-json": "^1.55.0",
-    "typescript": "4.6.3"
+    "typescript": "^3.2.1"
   }
 }
