--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "next-auth": "^4.22.1",
     "next-seo": "^5.5.0",
     "nodemailer": "^6.9.3",
+    "posthog-js": "^1.75.2",
+    "posthog-node": "^3.1.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^18.2.0",
