refractor: user loops.so for auth emails

--- a/.env.Example
+++ b/.env.Example
@@ -1,15 +1,18 @@
+## .env is only read at runtime, so you can compile the app without them
+## that being said, you'll need a database no matter what, the rest are as needed
+
 # tracks root domain
 NEXT_PUBLIC_VERCEL_URL=
-
-# for domain adding
-VERCEL_TOKEN=
-VERCEL_TEAM=
-VERCEL_PROJECT=
 
 # stores all users
 DATABASE_URL=
 DIRECT_URL=
 SHADOW_DATABASE_URL=
+
+# allow custom domains
+VERCEL_TOKEN=
+VERCEL_TEAM=
+VERCEL_PROJECT=
 
 # google auth
 GOOGLE_CLIENT_ID=
@@ -19,12 +22,16 @@ GOOGLE_CLIENT_SECRET=
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 
-# email auth (perhaps one day for success message etc)
+# email details using SMPT
 SMTP_HOST=
 SMTP_PORT=
 SMTP_USER=
 SMTP_PASSWORD=
 SMTP_FROM=
+
+# email details using an API (loops, sendgrid, etc) 
+LOOPS_API_KEY=
+
 
 # stores images
 CLOUDFLARE_TOKEN=
@@ -32,3 +39,7 @@ CLOUDFLARE_ACCOUNT=
 
 # key for encrypting cookies
 SECRET=
+
+# for internal analytics
+NEXT_PUBLIC_POSTHOG_HOST=
+NEXT_PUBLIC_POSTHOG_KEY=
